tests/e2e/semantics/foreach_dict_key_float.error
Error: syntax error in story at line 3, column 5

3|        k = "a"
          ^^^

E0100: Can't assign `string` to `float`
